--- a/scrumapp-jsf/src/main/webapp/views/backlog.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/backlog.xhtml
@@ -81,7 +81,7 @@
 
 				<p:toolbar style="float:right;">
 					<p:toolbarGroup>
-						<p:commandButton value="New" icon="fa fa-plus"
+						<p:commandButton value="Nueva historia" icon="fa fa-plus"
 							actionListener="#{backlogController.nuevaHistoria}"
 							update="@form :dialogForm" oncomplete="PF('editarHistoriaDialog').show()"
 							styleClass="ui-button-success" style="margin-right: .5rem">
@@ -146,7 +146,7 @@
 				<f:facet name="footer">
 					<p:commandButton value="Cancelar" icon="fa fa-times"
 						onclick="PF('editarHistoriaDialog').hide()"
-						class="ui-button-secondary" >
+						styleClass="ui-button-red" style="margin-right: 10px;">
 						<p:resetInput target=":dialogForm:editarHistoriaDialog" />
 						</p:commandButton>
 					<p:commandButton value="Guardar" icon="fa fa-check"
