--- a/scrumapp-jsf/src/main/webapp/views/projects.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/projects.xhtml
@@ -223,7 +223,7 @@
 				<f:facet name="footer">
 					<p:commandButton value="Cancelar" icon="fa fa-times"
 						onclick="PF('editarProyectoDialog').hide()"
-						class="ui-button-secondary" >
+						styleClass="ui-button-red" style="margin-right: 10px;">
 						<p:resetInput target=":form1:editarProyectoDialog" />
 						</p:commandButton>
 					<p:commandButton value="Guardar" icon="fa fa-check"
