--- a/scrumapp-jsf/src/main/webapp/views/backlog.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/backlog.xhtml
@@ -37,23 +37,23 @@
 				            styleClass="ui-icon ui-icon-arrow-4" />
 				    </p:column>
 					
-					<p:column headerText="Código">
+					<p:column headerText="Código"  width="15%">
 						<h:outputText value="#{historia.codigo}" />
 					</p:column>
 					
-					<p:column headerText="Nombre">
+					<p:column headerText="Nombre"  width="25%">
 						<h:outputText value="#{historia.nombre}" />
 					</p:column>
 
-					<p:column headerText="Descripcion">
+					<p:column headerText="Descripcion"  width="30%">
 						<h:outputText value="#{historia.descripcion}" />
 					</p:column>
 
-					<p:column headerText="Esfuerzo">
+					<p:column headerText="Esfuerzo"  width="10%">
 						<h:outputText value="#{historia.esfuerzo}" />
 					</p:column>
 					
-					<p:column headerText="Prioridad">
+					<p:column headerText="Prioridad"  width="7%">
 						<h:outputText value="#{historia.prioridad}" />
 					</p:column>
 
