--- a/scrumapp-jsf/src/main/webapp/views/projects.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/projects.xhtml
@@ -16,7 +16,7 @@
 					value="#{proyectoController.proyectos}" size="large" reflow="true"
 					selection="#{proyectoController.proyectosSeleccionados}"
 					rowKey="#{proyecto.idProyecto}" paginator="true" rows="10"
-					rowSelectMode="add" paginatorPosition="bottom">
+					rowSelectMode="add" paginatorPosition="bottom" styleClass="projectsTable">
 
 					<f:facet name="header">
 
