--- a/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -18,9 +18,9 @@
                 <p:panelGrid id="topbar" columns="3" layout="grid" 
                  columnClasses="ui-grid-col-2,ui-grid-col-8,ui-grid-col-2" style="border: 0px; text-align:center; border: 0px;" >
                  <p:panelGrid/>
-	                <h:link outcome="/views/dashboard.xhmtl">
+	                <h:commandLink action="gotoprojects">
 				        <p:graphicImage library="img" name="logo.png" height="100px" />
-				    </h:link>
+				    </h:commandLink>
 				    <p:panelGrid/>
 				</p:panelGrid>    
                     <p:menubar style="background: #b8d8f5; padding-left: 50px; padding-right: 20px;">
@@ -41,6 +41,14 @@
         </div>
 
         <ui:insert name="body"/>
+        
+        <ui:include src="./footer.xhtml"></ui:include>
+
+		  <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()"/>
+
+		    <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false" styleClass="loadingPanel">
+		        <p:graphicImage library="img"  name="tenor.gif"  /> 
+		    </p:dialog>
 
     </h:body>
 
