--- a/scrumapp-jsf/src/main/webapp/views/projects.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/projects.xhtml
@@ -11,7 +11,7 @@
 
 			<p:panelGrid id="container" columns="1" layout="grid"
 				style="border: 0px;">
-				<h:outputText value="Mis Proyectos" styleClass="tittle"/>
+				<h:outputText value="#{msg['projects.tittle']}" styleClass="tittle"/>
 				<p:dataTable id="proyectos" widgetVar="proyectos" var="proyecto"
 					value="#{proyectoController.proyectos}" size="large" reflow="true"
 					selection="#{proyectoController.proyectosSeleccionados}"
@@ -22,7 +22,7 @@
 
 						<p:outputPanel>
 							<div style="text-align: right;">
-								<p:commandButton id="toggler" type="button" value="Mostrar/Ocultar columnas"
+								<p:commandButton id="toggler" type="button" value="#{msg['projects.button.columnas']}"
 									icon="pi pi-align-justify" />
 								<p:columnToggler datasource="proyectos" trigger="toggler" />
 							</div>
@@ -35,7 +35,7 @@
 					<p:ajax event="rowUnselectCheckbox" update="@form" />
 					<p:ajax event="toggleSelect" update="@form" />
 
-					<p:column headerText="Nombre" sortBy="#{proyecto.nombre}">
+					<p:column headerText="#{msg['projects.table.name']}" sortBy="#{proyecto.nombre}">
 						<p:commandLink id="gotoproyecto"
 							action="#{proyectoController.goToProyecto(proyecto.idProyecto)}"
 							ajax="false">
@@ -44,22 +44,22 @@
 
 					</p:column>
 					
-					<p:column headerText="Código" sortBy="#{proyecto.codigo}" width="10%">
+					<p:column headerText="#{msg['projects.table.code']}" sortBy="#{proyecto.codigo}" width="10%">
 						<h:outputText value="#{proyecto.codigo}" />
 					</p:column>
 					
-					<p:column headerText="Descripción" sortBy="#{proyecto.descripcion}">
+					<p:column headerText="#{msg['projects.table.desc']}" sortBy="#{proyecto.descripcion}">
 						<h:outputText value="#{proyecto.descripcion}" />
 					</p:column>
 
-					<p:column headerText="Fecha de inicio"
+					<p:column headerText="#{msg['projects.table.fecini']}"
 						sortBy="#{proyecto.fechaInicio}" width="10%">
 						<h:outputText value="#{proyecto.fechaInicio}">
 							<f:convertDateTime type="date" pattern="dd-MM-yyyy" timeZone="GMT+2"/>
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="Acciones" style="text-align: -webkit-center;"
+					<p:column headerText="#{msg['projects.table.actions']}" style="text-align: -webkit-center;"
 						width="10%">
 						<p:commandButton icon="fa fa-pencil" update="@form :form1"
 							oncomplete="PF('editarProyectoDialog').show()"
@@ -86,7 +86,7 @@
 
 				<p:toolbar style="float:right;">
 					<p:toolbarGroup>
-						<p:commandButton value="Nuevo" icon="fa fa-plus" process="@this"
+						<p:commandButton value="#{msg['projects.button.newProject']}" icon="fa fa-plus" process="@this"
 							actionListener="#{proyectoController.nuevoProyecto}"
 							update="@form :form1" oncomplete="PF('editarProyectoDialog').show()"
 							styleClass="ui-button-success" style="margin-right: .5rem">
@@ -104,13 +104,13 @@
 
 			<p:confirmDialog id="deleteProyectoDialog"
 				widgetVar="deleteProyectoDialog" showEffect="fade" width="300"
-				responsive="true" message="Delete the product?" header="Confirm"
+				responsive="true" message="#{msg['projects.deleteProyectoDialog.message']}" header="#{msg['projects.deleteProyectoDialog.header']}"
 				severity="warn">
-				<p:commandButton value="Yes" icon="pi pi-check"
+				<p:commandButton value="#{msg['projects.deleteProyectoDialog.yes']}" icon="pi pi-check"
 					actionListener="#{proyectoController.eliminarProyecto}"
 					process="@this" oncomplete="PF('deleteProyectoDialog').hide()"
 					update="@form" />
-				<p:commandButton value="No" type="button"
+				<p:commandButton value="#{msg['projects.deleteProyectoDialog.no']}" type="button"
 					styleClass="ui-button-secondary" icon="pi pi-times"
 					onclick="PF('deleteProyectoDialog').hide()" />
 			</p:confirmDialog>
@@ -119,7 +119,7 @@
 		
 		
 		<h:form id="form1">
-		<p:dialog id="editarProyectoDialog" header="Detalles del proyecto"
+		<p:dialog id="editarProyectoDialog" header="#{msg['projects.editarProyectoDialog.header']}"
 				showEffect="fade" modal="true" widgetVar="editarProyectoDialog"
 				responsive="true" width="80%">
 				
@@ -129,14 +129,14 @@
 					style="border: 0px;" rendered="#{not empty proyectoController.proyectoSelec}">
 					<p:outputPanel id="manage-proyecto-content-nombre" class="ui-fluid">
 						<div class="p-field">
-							<p:outputLabel for="nombre">Nombre</p:outputLabel>
+							<p:outputLabel for="nombre">#{msg['projects.editarProyectoDialog.name']}</p:outputLabel>
 							<p:inputText id="nombre"
 								value="#{proyectoController.proyectoSelec.nombre}"
 								required="true" />
 						</div>
 						
 						<div class="p-field">
-							<p:outputLabel for="descripcion">Descripcion</p:outputLabel>
+							<p:outputLabel for="descripcion">#{msg['projects.editarProyectoDialog.desc']}</p:outputLabel>
 							<p:inputTextarea id="descripcion"
 								value="#{proyectoController.proyectoSelec.descripcion}" rows="9" />
 						</div>
@@ -144,7 +144,7 @@
 
 					<p:outputPanel id="manage-proyecto-content-devs" class="ui-fluid">
 						<div class="p-field">
-							<p:outputLabel for="developers">Developers</p:outputLabel>
+							<p:outputLabel for="developers">#{msg['projects.editarProyectoDialog.devs']}</p:outputLabel>
 							<p:selectManyMenu id="developers"
 								value="#{proyectoController.proyectoSelec.developers}"
 								converter="#{miembroConverter}" var="dev" filter="true"
@@ -155,11 +155,11 @@
 									itemLabel="#{d.email}" itemValue="#{d}" />
 								<f:attribute name="collectionType" value="java.util.ArrayList" />
 
-								<p:column headerText="Nombre">
+								<p:column headerText="#{msg['projects.editarProyectoDialog.devs.name']}">
 									<h:outputText value="#{dev.nombre}" />
 								</p:column>
 
-								<p:column headerText="Apellidos">
+								<p:column headerText="#{msg['projects.editarProyectoDialog.devs.surname']}">
 									<h:outputText value="#{dev.apellidos}" />
 								</p:column>
 							</p:selectManyMenu>
@@ -168,7 +168,7 @@
 					<p:outputPanel id="manage-proyecto-content-po" class="ui-fluid">
 
 						<div class="p-field">
-							<p:outputLabel for="productOwner">Product Owner</p:outputLabel>
+							<p:outputLabel for="productOwner">#{msg['projects.editarProyectoDialog.po']}</p:outputLabel>
 							<p:selectOneMenu id="productOwner" disabled="true"
 								value="#{proyectoController.proyectoSelec.productOwner}"
 								converter="#{miembroConverter}">
@@ -184,7 +184,7 @@
 					<p:outputPanel id="manage-proyecto-content-sm" class="ui-fluid">
 
 						<div class="p-field">
-							<p:outputLabel for="scrumMaster">Scrum Master</p:outputLabel>
+							<p:outputLabel for="scrumMaster">#{msg['projects.editarProyectoDialog.sm']}</p:outputLabel>
 							<p:selectOneMenu id="scrumMaster"
 								value="#{proyectoController.proyectoSelec.scrumMaster}"
 								converter="#{miembroConverter}">
@@ -200,7 +200,7 @@
 					<p:outputPanel id="manage-proyecto-content-fini" class="ui-fluid">
 
 						<div class="p-field">
-							<p:outputLabel for="fecIni">Fecha de inicio</p:outputLabel>
+							<p:outputLabel for="fecIni">#{msg['projects.editarProyectoDialog.fecini']}</p:outputLabel>
 							<p:datePicker id="fecIni"
 								value="#{proyectoController.proyectoSelec.fechaInicio}" />
 						</div>
@@ -209,7 +209,7 @@
 					<p:outputPanel id="manage-proyecto-content-codigo" class="ui-fluid">
 
 						<div class="p-field">
-							<p:outputLabel for="codigo">Código de proyecto (max. 5 carac.)</p:outputLabel>
+							<p:outputLabel for="codigo">#{msg['projects.editarProyectoDialog.code']}</p:outputLabel>
 							<p:inputText id="codigo"
 								value="#{proyectoController.proyectoSelec.codigo}"
 								required="true" maxlength="5" onblur="value=value.toUpperCase()"
@@ -221,12 +221,12 @@
 
 				</p:panelGrid>
 				<f:facet name="footer">
-					<p:commandButton value="Cancelar" icon="fa fa-times"
+					<p:commandButton value="#{msg['projects.editarProyectoDialog.cancel']}" icon="fa fa-times"
 						onclick="PF('editarProyectoDialog').hide()"
 						styleClass="ui-button-red" style="margin-right: 10px;">
 						<p:resetInput target=":form1:editarProyectoDialog" />
 						</p:commandButton>
-					<p:commandButton value="Guardar" icon="fa fa-check"
+					<p:commandButton value="#{msg['projects.editarProyectoDialog.save']}" icon="fa fa-check"
 						actionListener="#{proyectoController.guardarProyecto}"
 						oncomplete="PF('editarProyectoDialog').hide()" update="@form :form" />
 				</f:facet>
